--- a/src/components/ArtThumbnail.astro
+++ b/src/components/ArtThumbnail.astro
@@ -73,6 +73,8 @@ const formats =
   alt={imgTitle}
   title={imgTitle}
   formats={formats}
+  format={art.data.type === 'animation' ? 'webp' : 'png'}
+  fallbackFormat={art.data.type === 'animation' ? 'webp' : 'png'}
   width={width}
   height={width}
   class='h-full w-full object-cover transition-transform duration-500 group-hover:scale-105'
