--- a/src/components/ArtCarousel.astro
+++ b/src/components/ArtCarousel.astro
@@ -44,7 +44,7 @@ const carouselDescription = 'Scroll horizontally to view more artwork'
       {
         carouselItems.map(({ art, isMultiImage, imageCount }, index) => (
           <li
-            class='carousel-item w-[calc(50%-0.5rem)] lg:w-[calc(33.333%-0.75rem)]'
+            class='carousel-item w-[calc(66.666%-0.75rem)] sm:w-[calc(50%-0.5rem)] lg:w-[calc(33.333%-0.75rem)]'
             role='group'
             aria-roledescription='slide'
             aria-label={`Artwork ${index + 1} of ${carouselItems.length}: ${art.data.title}`}
@@ -114,32 +114,32 @@ const carouselDescription = 'Scroll horizontally to view more artwork'
     showSwipeIndicator && (
       <>
         <div
-          class='pointer-events-none absolute right-0 top-0 z-10 hidden h-full w-24 bg-gradient-to-l from-base-100/80 to-transparent opacity-0 transition-opacity duration-300 lg:block'
+          class='pointer-events-none absolute right-0 top-0 z-10 h-full w-16 bg-gradient-to-l from-base-100/90 to-transparent opacity-0 transition-opacity duration-300 sm:w-24'
           data-carousel-gradient='right'
           data-carousel-id={carouselId}
           role='presentation'
           aria-hidden='true'
         >
-          <div class='absolute right-4 top-1/2 flex -translate-y-1/2 flex-col items-center gap-1'>
+          <div class='absolute right-2 top-1/2 flex -translate-y-1/2 flex-col items-center gap-1 sm:right-4'>
             <Icon
               name='mdi:chevron-right'
-              class='h-10 w-10 animate-[bounce_2s_infinite] text-base-content'
+              class='h-8 w-8 animate-[bounce_2s_infinite] text-base-content sm:h-10 sm:w-10'
               aria-hidden='true'
             />
             <span class='sr-only'>More artwork available - scroll right</span>
           </div>
         </div>
         <div
-          class='pointer-events-none absolute left-0 top-0 z-10 hidden h-full w-24 bg-gradient-to-r from-base-100/80 to-transparent opacity-0 transition-opacity duration-300 lg:block'
+          class='pointer-events-none absolute left-0 top-0 z-10 h-full w-16 bg-gradient-to-r from-base-100/90 to-transparent opacity-0 transition-opacity duration-300 sm:w-24'
           data-carousel-gradient='left'
           data-carousel-id={carouselId}
           role='presentation'
           aria-hidden='true'
         >
-          <div class='absolute left-4 top-1/2 flex -translate-y-1/2 flex-col items-center gap-1'>
+          <div class='absolute left-2 top-1/2 flex -translate-y-1/2 flex-col items-center gap-1 sm:left-4'>
             <Icon
               name='mdi:chevron-left'
-              class='h-10 w-10 animate-[bounce_2s_infinite] text-base-content'
+              class='h-8 w-8 animate-[bounce_2s_infinite] text-base-content sm:h-10 sm:w-10'
             />
           </div>
         </div>
