--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -13,7 +13,9 @@ import { Icon } from 'astro-icon/components'
       <nav aria-label='Breadcrumb' class='h-6'>
         <Breadcrumbs />
       </nav>
-      <div class='flex h-10 items-center justify-between pt-2'>
+      <div
+        class='flex h-10 items-center justify-between pt-2 text-xs md:text-sm'
+      >
         <div>
           <div class='flex items-center gap-1'>
             <Icon name='anticopyright' class='text-[11px]' />
@@ -37,9 +39,10 @@ import { Icon } from 'astro-icon/components'
           </div>
         </div>
         <div class='button-group flex min-w-[4.4rem] items-center gap-2'>
-          <!-- <ColorModeButton /> -->
           <div id='back-to-top-wrapper' transition:persist>
-            <Button id='back-to-top' arrow='up'>Back to top</Button>
+            <Button id='back-to-top' arrow='up'>
+              <span class='hidden md:inline'>Back to top</span>
+            </Button>
           </div>
         </div>
       </div>
