--- a/src/components/layout/Subheader.astro
+++ b/src/components/layout/Subheader.astro
@@ -32,7 +32,7 @@ const {
 } = Astro.props
 ---
 
-<header class='space-y-2'>
+<header class='animate space-y-2'>
   <!-- row 1: metadata (dates, reading time, etc) -->
   {
     isPost && publishDate && (
