--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -49,7 +49,7 @@ const years = Object.keys(posts).sort(
         {
           years.map((year) => (
             <section class='animate'>
-              <div class='animate divider divider-start my-8 font-medium text-base-content/75'>
+              <div class='divider divider-start my-8 font-medium text-base-content/75'>
                 {year}
               </div>
               <div>
