--- a/src/pages/unlicense.astro
+++ b/src/pages/unlicense.astro
@@ -54,6 +54,7 @@ const DESCRIPTION =
         </p>
       </article>
       <ContentVideo
+        class='animate'
         src='IeTybKL1pM4'
         title='"Copying Is Not Theft" by Question Copyright'
       />
