--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,13 +12,19 @@ import PageLayout from '@/layouts/PageLayout.astro'
 import { getCollection } from 'astro:content'
 
 const allPosts = (await getCollection('blog'))
-  .filter((post) => !post.data.draft)
-  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+  .filter((post: any) => !post.data.draft)
+  .sort(
+    (a: any, b: any) =>
+      b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
+  )
   .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE)
 
 const recentArts = (await getCollection('art'))
-  .filter((art) => !art.data.draft)
-  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+  .filter((art: any) => !art.data.draft)
+  .sort(
+    (a: any, b: any) =>
+      b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
+  )
   .slice(0, SITE.NUM_ART_ON_HOMEPAGE)
 ---
 
@@ -54,7 +60,7 @@ const recentArts = (await getCollection('art'))
         </div>
         <ul class='flex flex-col gap-4'>
           {
-            allPosts.map((post) => (
+            allPosts.map((post: any) => (
               <li>
                 <ArrowCard
                   title={post.data.title}
